--- a/views/index.hbs
+++ b/views/index.hbs
@@ -68,8 +68,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Quantity</h5>
                             <div class="d-grid gap-2 col-3 mx-auto">
-                                <input type="number" class="btn-check" name="qty" id="qty" autocomplete="off">
-                                <label class="btn btn-outline-primary" for="qty">Consume</label>
+                                <input type="number" class="form-control" name="qty" id="qty" value="1" autocomplete="off">
                             </div>
                         </div>
                     </div>
