connected to google-spreadsheet

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -39,11 +39,11 @@
                                     <h5 class="card-title">Material</h5>
 
                                     <div class="d-grid gap-2 col-3 mx-auto">
-                                        <input type="radio" class="btn-check" name="material" id="A" value="A" autocomplete="off">
-                                        <label class="btn btn-outline-primary" for="A">Aluminium</label>
+                                        <input type="radio" class="btn-check" name="material" id="aluminium" value="aluminium" autocomplete="off">
+                                        <label class="btn btn-outline-primary" for="aluminium">Aluminium</label>
 
-                                        <input type="radio" class="btn-check" name="material" id="W" value="W" autocomplete="off">
-                                        <label class="btn btn-outline-primary" for="W">Wood</label>
+                                        <input type="radio" class="btn-check" name="material" id="wood" value="wood" autocomplete="off">
+                                        <label class="btn btn-outline-primary" for="wood">Wood</label>
                                     </div>
                                 </div>
                             </div>
@@ -55,11 +55,11 @@
                                     <h5 class="card-title">Size</h5>
 
                                     <div class="d-grid gap-2 col-3 mx-auto">
-                                        <input type="radio" class="btn-check" name="size" id="F" value="F" autocomplete="off">
-                                        <label class="btn btn-outline-primary" for="F">Full</label>
+                                        <input type="radio" class="btn-check" name="size" id="full" value="full" autocomplete="off">
+                                        <label class="btn btn-outline-primary" for="full">Full</label>
 
-                                        <input type="radio" class="btn-check" name="size" id="H" value="H" autocomplete="off">
-                                        <label class="btn btn-outline-primary" for="H">Half</label>
+                                        <input type="radio" class="btn-check" name="size" id="half" value="half" autocomplete="off">
+                                        <label class="btn btn-outline-primary" for="half">Half</label>
                                     </div>
                                 </div>
                             </div>
