--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,8 +17,7 @@
 		</div>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/stockin">Stock In</a></li>
-            <li><a href="/log">Log</a></li>
+            <li><a href="/stock">Stock</a></li>
         </ul>
     </nav>
 
@@ -71,11 +70,11 @@
                                     <h5 class="card-title">Task</h5>
 
                                     <div class="d-grid gap-2 col-3 mx-auto">
-                                        <input type="radio" class="btn-check" name="task" id="plus" value='plus' autocomplete="off">
-                                        <label class="btn btn-outline-primary" for="plus">Return</label>
+                                        <input type="radio" class="btn-check" name="task" id="return" value='return' autocomplete="off">
+                                        <label class="btn btn-outline-primary" for="return">Return</label>
 
-                                        <input type="radio" class="btn-check" name="task" id="minus" value='minus' autocomplete="off">
-                                        <label class="btn btn-outline-primary" for="minus">Consume</label>
+                                        <input type="radio" class="btn-check" name="task" id="consume" value='consume' autocomplete="off">
+                                        <label class="btn btn-outline-primary" for="consume">Consume</label>
                                     </div>
                                 </div>
                             </div>
