--- a/views/index.hbs
+++ b/views/index.hbs
@@ -36,13 +36,34 @@
                             <div class="card text-center mt-4">
                                 <div class="card-body">
                                     <h5 class="card-title">Material</h5>
-
-                                    <div class="d-grid gap-2 col-3 mx-auto">
-                                        <input type="radio" class="btn-check" name="material" id="aluminium" value="aluminium" autocomplete="off">
-                                        <label class="btn btn-outline-primary" for="aluminium">Aluminium</label>
-
-                                        <input type="radio" class="btn-check" name="material" id="wood" value="wood" autocomplete="off">
-                                        <label class="btn btn-outline-primary" for="wood">Wood</label>
+                                    <div class="d-grid mx-auto">
+                                        <select class="form-select" id="Code" name="Code">
+                                            <option selected>Select</option>
+                                            
+                                            <option value="T302_50">(Type 302) 2000 x 500 x 50 (£91.85)</option>
+                                            <option value="T302_100">(Type 302) 2000 x 500 x 100 (£183.70)</option>
+                                            <option value="T302_150">(Type 302) 2000 x 500 x 150 (£275.55)</option>
+                                            
+                                            <option value="T502_50">(Type 502) 1500x500x50 (£89.90)</option>
+                                            <option value="T502_75">(Type 502) 1500x500x75 (£134.85)</option>
+                                            <option value="T502_100">(Type 502) 1500x500x100 (£179.80)</option>
+                                            
+                                            <option value="T630_50">(Type 630) 1500 x 500 x 50 (£94.65)</option>
+                                            <option value="T630_75">(Type 630) 1500 x 500 x 75 (£141.98)</option>
+                                            <option value="T630_100">(Type 630) 1500 x 500 x 100 (£189.30)</option>
+                                            
+                                            <option value="T750_50">(Type 750) 1500x500x50 (£117.40)</option>
+                                            <option value="T750_75">(Type 750) 1500x500x75 (£176.10)</option>
+                                            <option value="T750_100">(Type 750) 1500x500x100 (£234.80)</option>
+                                            
+                                            <option value="T850_50">(Type 850) 1500x500x50 (£193.45)</option>
+                                            <option value="T850_75">(Type 850) 1500x500x75 (£290.18)</option>
+                                            <option value="T850_100">(Type 850) 1500x500x100 (£386.90)</option>
+                                            
+                                            <option value="T1200_50">(Type 1200) 1500x500x50 (£135.45)</option>
+                                            <option value="T1200_75">(Type 1200) 1500x500x75 (£203.18)</option>
+                                            <option value="T1200_100">(Type 1200) 1500x500x100 (£270.90)</option>
+                                        </select>
                                     </div>
                                 </div>
                             </div>
@@ -54,11 +75,11 @@
                                     <h5 class="card-title">Size</h5>
 
                                     <div class="d-grid gap-2 col-3 mx-auto">
-                                        <input type="radio" class="btn-check" name="size" id="full" value="full" autocomplete="off">
-                                        <label class="btn btn-outline-primary" for="full">Full</label>
+                                        <input type="radio" class="btn-check" name="size" id="Full" value="Full" autocomplete="off">
+                                        <label class="btn btn-outline-primary" for="Full">Full</label>
 
-                                        <input type="radio" class="btn-check" name="size" id="half" value="half" autocomplete="off">
-                                        <label class="btn btn-outline-primary" for="half">Half</label>
+                                        <input type="radio" class="btn-check" name="size" id="Half" value="Half" autocomplete="off">
+                                        <label class="btn btn-outline-primary" for="Half">Half</label>
                                     </div>
                                 </div>
                             </div>
